[package]
    name = "matrixprint"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    futures-channel = "0.3.21"
    futures-util = "0.3.21"
    log = "0.4.17"
    pretty_env_logger = "0.5.0"
    serde = { version = "1.0.137", features = ["derive"] }
    serde_json = "1.0.82"
    thiserror = "1.0.31"
    tokio = { version = "1", features = ["full"] }
    tokio-tungstenite = { version = "0.19.0", features = [
        "rustls-tls-native-roots",
    ] }
    url = "2.2.2"
    rppal = { version = "0.14.1", optional = true }
    clap = { version = "3.2.8", features = ["derive"] }
    anyhow = "1.0.58"
    reqwest = { version = "0.11.11", features = [
        "rustls-tls",
    ], default-features = false }
printers = "1.2.0"

[features]
    default = ["rpi"]
    rpi = ["dep:rppal"]
